--- a/apps/docs/src/pages/blog/[slug].astro
+++ b/apps/docs/src/pages/blog/[slug].astro
@@ -27,6 +27,11 @@ const { blog } = Astro.props;
     <h1 class="font-bold tracking-tighter text-4xl">
       {blog.data.title}
     </h1>
+    {
+      blog.data.subtitle && (
+        <h2 class="font-semibold tracking-tight text-2xl">{blog.data.subtitle}</h2>
+      )
+    }
     <p class="text-muted-foreground">
       By <a
         class="underline text-foreground font-medium"
