--- a/apps/docs/src/pages/blog/index.astro
+++ b/apps/docs/src/pages/blog/index.astro
@@ -7,8 +7,9 @@ import { BlogsSection } from "@/components/BlogsSection.tsx";
 import StarlightPage from "@astrojs/starlight/components/StarlightPage.astro";
 import { getCollection } from "astro:content";
 
-// Get all blogs from blog collection
+// Get all blogs from blog collection (newest first)
 const blogs = await getCollection("blog");
+blogs.sort((a, b) => b.data.date.getTime() - a.data.date.getTime());
 ---
 
 <StarlightPage frontmatter={{ title: "Blog", template: "splash" }}>
