--- a/apps/docs/src/pages/blog/index.astro
+++ b/apps/docs/src/pages/blog/index.astro
@@ -15,4 +15,5 @@ blogs.sort((a, b) => b.data.date.getTime() - a.data.date.getTime());
 <StarlightPage frontmatter={{ title: "Blog", template: "splash" }}>
   <BlogHeroSection />
   <BlogsSection blogs={blogs} />
+  <div class="h-32"></div>
 </StarlightPage>
