--- a/apps/docs/src/styles/blog.css
+++ b/apps/docs/src/styles/blog.css
@@ -1,5 +1,5 @@
 /* Fixes for blog content styles */
-.sl-markdown-content article ul {
+/*.sl-markdown-content article ul {
   margin-left: 1.5rem !important;
 }
 .sl-markdown-content article ol {
@@ -15,3 +15,5 @@
   padding: 2rem;
   border-radius: 0.5rem;
 }
+
+*/
