--- a/apps/docs/src/pages/blog/index.astro
+++ b/apps/docs/src/pages/blog/index.astro
@@ -1,6 +1,5 @@
 ---
-import "../../styles/custom.css";
-import "../../styles/global.css";
+import "@/styles/custom.css";
 
 import { BlogHeroSection } from "@/components/BlogHeroSection.tsx";
 import { BlogsSection } from "@/components/BlogsSection.tsx";
