--- a/apps/docs/src/styles/docs.css
+++ b/apps/docs/src/styles/docs.css
@@ -1,3 +1,4 @@
+/*
 .sl-markdown-content ul:not(:where(.not-content *)) {
   margin-left: 0 !important;
 }
@@ -10,7 +11,6 @@
   padding-bottom: 64px;
 }
 
-/* Add emoji logo to title */
 header span.title-text {
   font-size: 1.2rem;
   padding-left: 2.5rem;
@@ -30,3 +30,5 @@ header span.title-text::before {
 header a.active {
   font-weight: 600 !important;
 }
+
+*/
