--- a/apps/docs/src/styles/global.css
+++ b/apps/docs/src/styles/global.css
@@ -1,82 +1,12 @@
 @import "tailwindcss";
 @plugin "@tailwindcss/typography";
-
-/* Plugins */
 @plugin "tailwindcss-animate";
+@plugin "@astrojs/starlight-tailwind";
 
-/* Starlight uses [data-theme="dark"] on <html /> */
-@custom-variant dark (&:is([data-theme="dark"] *));
 
-/* Shadcn-UI theme */
-@layer base {
-  :root {
-    --color-background: oklch(1 0 0);
-    --color-foreground: oklch(0.145 0 0);
-    --color-card: oklch(1 0 0);
-    --color-card-foreground: oklch(0.145 0 0);
-    --color-popover: oklch(1 0 0);
-    --color-popover-foreground: oklch(0.145 0 0);
-    --color-primary: oklch(0.205 0 0);
-    --color-primary-foreground: oklch(0.985 0 0);
-    --color-secondary: oklch(0.97 0 0);
-    --color-secondary-foreground: oklch(0.205 0 0);
-    --color-muted: oklch(0.97 0 0);
-    --color-muted-foreground: oklch(0.556 0 0);
-    --color-accent: oklch(0.97 0 0);
-    --color-accent-foreground: oklch(0.205 0 0);
-    --color-border: oklch(0.922 0 0);
-    --color-input: oklch(0.922 0 0);
-    --color-ring: oklch(0.708 0 0);
-    --radius: 0.625rem;
-  }
 
-  :root[data-theme="dark"] {
-    --color-background: oklch(0.145 0 0);
-    --color-foreground: oklch(0.985 0 0);
-    --color-card: oklch(0.145 0 0);
-    --color-card-foreground: oklch(0.985 0 0);
-    --color-popover: oklch(0.145 0 0);
-    --color-popover-foreground: oklch(0.985 0 0);
-    --color-primary: oklch(0.985 0 0);
-    --color-primary-foreground: oklch(0.205 0 0);
-    --color-secondary: oklch(0.269 0 0);
-    --color-secondary-foreground: oklch(0.985 0 0);
-    --color-muted: oklch(0.269 0 0);
-    --color-muted-foreground: oklch(0.708 0 0);
-    --color-accent: oklch(0.269 0 0);
-    --color-accent-foreground: oklch(0.985 0 0);
-    --color-border: oklch(0.269 0 0);
-    --color-input: oklch(0.269 0 0);
-    --color-ring: oklch(0.439 0 0);
-  }
-}
-
-/* Tailwind theme */
 @theme inline {
-  /* Apply Shadcn-UI variables */
-  --color-background: var(--color-background);
-  --color-foreground: var(--color-foreground);
-  --color-card: var(--color-card);
-  --color-card-foreground: var(--color-card-foreground);
-  --color-popover: var(--color-popover);
-  --color-popover-foreground: var(--color-popover-foreground);
-  --color-primary: var(--color-primary);
-  --color-primary-foreground: var(--color-primary-foreground);
-  --color-secondary: var(--color-secondary);
-  --color-secondary-foreground: var(--color-secondary-foreground);
-  --color-muted: var(--color-muted);
-  --color-muted-foreground: var(--color-muted-foreground);
-  --color-accent: var(--color-accent);
-  --color-accent-foreground: var(--color-accent-foreground);
-  --color-border: var(--color-border);
-  --color-input: var(--color-input);
-  --color-ring: var(--color-ring);
-  --radius-sm: calc(var(--radius) - 4px);
-  --radius-md: calc(var(--radius) - 2px);
-  --radius-lg: var(--radius);
-  --radius-xl: calc(var(--radius) + 4px);
-
-  /* Customize starlight palatte: Slate as gray */
+  /* Customize palette: Slate as gray */
   --color-gray-50: oklch(0.984 0.003 247.858);
   --color-gray-100: oklch(0.968 0.007 247.896);
   --color-gray-200: oklch(0.929 0.013 255.508);
@@ -89,23 +19,69 @@
   --color-gray-900: oklch(0.208 0.042 265.755);
   --color-gray-950: oklch(0.129 0.042 264.695);
 
-  /* Customize starlight palette: Blue accent */
-  --color-accent-50: oklch(0.97 0.014 254.604);
-  --color-accent-100: oklch(0.932 0.032 255.585);
-  --color-accent-200: oklch(0.882 0.059 254.128);
-  --color-accent-300: oklch(0.809 0.105 251.813);
-  --color-accent-400: oklch(0.707 0.165 254.624);
-  --color-accent-500: oklch(0.623 0.214 259.815);
-  --color-accent-600: oklch(0.546 0.245 262.881);
-  --color-accent-700: oklch(0.488 0.243 264.376);
-  --color-accent-800: oklch(0.424 0.199 265.638);
-  --color-accent-900: oklch(0.379 0.146 265.522);
-  --color-accent-950: oklch(0.282 0.091 267.935);
+  /* Customize palette: Emerald accent */
+  --color-accent-50: oklch(0.979 0.021 166.113);
+  --color-accent-100: oklch(0.95 0.052 163.051);
+  --color-accent-200: oklch(0.905 0.093 164.15);
+  --color-accent-300: oklch(0.845 0.143 164.978);
+  --color-accent-400: oklch(0.765 0.177 163.223);
+  --color-accent-500: oklch(0.696 0.17 162.48);
+  --color-accent-600: oklch(0.596 0.145 163.225);
+  --color-accent-700: oklch(0.508 0.118 165.612);
+  --color-accent-800: oklch(0.432 0.095 166.913);
+  --color-accent-900: oklch(0.378 0.077 168.94);
+  --color-accent-950: oklch(0.262 0.051 172.552);
+
+	/** Apply starlight theme to CSS */
+	--color-sl-accent-low: var(--sl-color-accent-low);
+	--color-sl-accent: var(--sl-color-accent);
+	--color-sl-accent-high: var(--sl-color-accent-high);
+	--color-sl-white: var(--sl-color-white);
+	--color-sl-black: var(--sl-color-black);
+	--color-sl-gray-1: var(--sl-color-gray-1);
+	--color-sl-gray-2: var(--sl-color-gray-2);
+	--color-sl-gray-3: var(--sl-color-gray-3);
+	--color-sl-gray-4: var(--sl-color-gray-4);
+	--color-sl-gray-5: var(--sl-color-gray-5);
+	--color-sl-gray-6: var(--sl-color-gray-6);
+	--color-sl-gray-7: var(--sl-color-gray-7);
 }
 
-/* Apply defaults */
-@layer base {
-  * {
-    @apply border-border outline-ring/50;
-  }
+:root {
+	--sl-color-accent-low: var(--color-accent-50);
+	--sl-color-accent: var(--color-accent-500);
+	--sl-color-accent-high: var(--color-accent-600);
+
+	--sl-color-white: #ffffff;
+	--sl-color-black: var(--color-gray-950);
+
+	--sl-color-gray-1: var(--color-gray-100);
+	--sl-color-gray-2: var(--color-gray-300);
+	--sl-color-gray-3: var(--color-gray-400);
+	--sl-color-gray-4: var(--color-gray-500);
+	--sl-color-gray-5: var(--color-gray-600);
+	--sl-color-gray-6: var(--color-gray-800);
+	--sl-color-gray-7: var(--color-gray-900);
+}
+
+:root[data-theme="light"] {
+	--sl-color-accent-low: var(--color-accent-200);
+	--sl-color-accent: var(--color-accent-500) ;
+	--sl-color-accent-high: var(--color-accent-800);
+
+	--sl-color-white: var(--color-gray-950);
+	--sl-color-black: #ffffff;
+
+	--sl-color-gray-1: var(--color-gray-900);
+	--sl-color-gray-2: var(--color-gray-700);
+	--sl-color-gray-3: var(--color-gray-600);
+	--sl-color-gray-4: var(--color-gray-500);
+	--sl-color-gray-5: var(--color-gray-300);
+	--sl-color-gray-6: var(--color-gray-200);
+	--sl-color-gray-7: var(--color-gray-50);
+}
+
+/* Adjust logo position */
+header a[href="/"] img {
+	transform: translateY(-4px);
 }
