--- a/apps/docs/src/components/layout/Footer.astro
+++ b/apps/docs/src/components/layout/Footer.astro
@@ -3,7 +3,7 @@ import logoPng from "@/assets/logo.png";
 import { Image } from "astro:assets";
 ---
 
-<footer class="py-32 flex items-center">
+<footer class="py-32 flex items-center border-t">
   <div class="flex flex-col gap-16 mx-auto max-w-site px-4 w-full">
     <div class="flex items-center justify-center">
       <a href="/">
