--- a/apps/docs/src/components/mdx/Tab.astro
+++ b/apps/docs/src/components/mdx/Tab.astro
@@ -1,8 +1,13 @@
 ---
+type Props = {
+  label: string;
+};
 
+const { label } = Astro.props;
 ---
 
-<div class="bg-red-500/30">
-  This is a Tab
-  <slot />
+<div data-tab={label} class="hidden [grid-area:content]">
+  <div class="flex flex-col gap-4">
+    <slot />
+  </div>
 </div>
