--- a/apps/docs/src/components/mdx/UnorderedList.astro
+++ b/apps/docs/src/components/mdx/UnorderedList.astro
@@ -7,6 +7,6 @@ type Props = HTMLAttributes<"ul">;
 const { class: className, ...props } = Astro.props;
 ---
 
-<ul class={cn("pl-6 list-disc", className)} {...props}>
+<ul class={cn("pl-6 space-y-2 list-disc", className)} {...props}>
   <slot />
 </ul>
