--- a/apps/docs/src/components/mdx/Tab.astro
+++ b/apps/docs/src/components/mdx/Tab.astro
@@ -6,7 +6,7 @@ type Props = {
 const { label } = Astro.props;
 ---
 
-<div data-tab={label} class="hidden [grid-area:content]">
+<div data-tab={label} class="hidden">
   <div class="flex flex-col gap-4">
     <slot />
   </div>
