--- a/apps/docs/src/components/layout/Header.astro
+++ b/apps/docs/src/components/layout/Header.astro
@@ -26,7 +26,7 @@ const SOCIAL_LINKS = [
 ---
 
 <header
-  class="h-14 border-b sticky top-0 flex items-center bg-bg/90 backdrop-blur-sm z-30"
+  class="h-14 border-border-light border-b sticky top-0 flex items-center bg-bg/90 backdrop-blur-sm z-30"
   id="Header"
 >
   <div class="max-w-site mx-auto flex px-4 items-center justify-between w-full">
