--- a/apps/docs/src/pages/blog/[slug].astro
+++ b/apps/docs/src/pages/blog/[slug].astro
@@ -1,12 +1,10 @@
 ---
+import BlogArticleHeader from "@/components/blog/BlogArticleHeader.astro";
 import Layout from "@/components/layout/Layout.astro";
 import Section from "@/components/layout/Section.astro";
+import { components } from "@/components/mdx/_MdxComponents";
 import { getCollection, render } from "astro:content";
-import { formatDate } from "date-fns/format";
 
-// Get all blogs from blog collection
-
-// Statically prerender all blog pages
 export async function getStaticPaths() {
   const blogs = await getCollection("blog", ({ data }) => {
     return import.meta.env.PROD ? data.draft !== true : true;
@@ -19,49 +17,10 @@ const { Content } = await render(blog);
 ---
 
 <Layout>
-  <Section class="py-10 max-w-2xl flex flex-col gap-8">
-    <!-- Date -->
-    <p class="text-muted-fg">
-      {formatDate(blog.data.date, "EEEE, MMMM do yyyy")}
-    </p>
-
-    <!-- Titles closer to each other -->
-    <div class="flex flex-col gap-4">
-      <h1 class="font-bold tracking-tighter text-4xl">
-        {blog.data.title}
-      </h1>
-      {
-        blog.data.subtitle && (
-          <h2 class="font-semibold tracking-tight text-2xl">{blog.data.subtitle}</h2>
-        )
-      }
-    </div>
-
-    <!-- Author + image -->
-    <div class="flex items-center gap-4">
-      {
-        blog.data.authorImage && (
-          <img alt={blog.data.author} src={blog.data.authorImage} class="rounded-full size-10" />
-        )
-      }
-
-      <div>
-        <p class="leading-tight text-muted-fg">Written by</p>
-        <a
-          class="leading-tight underline text-foreground font-medium"
-          href={blog.data.authorUrl ?? "#"}
-          target="_blank"
-          rel="noopener noreferrer"
-        >
-          {blog.data.author}
-        </a>
-      </div>
-    </div>
-
-    <hr class="my-4" />
-
-    <article>
-      <Content />
+  <Section class="py-36 flex flex-col gap-8 mx-auto" style={{ maxWidth: "660px" }}>
+    <article class="flex flex-col gap-4">
+      <BlogArticleHeader {blog} />
+      <Content {components} />
     </article>
   </Section>
 </Layout>
