--- a/apps/docs/src/pages/docs/[...docs].astro
+++ b/apps/docs/src/pages/docs/[...docs].astro
@@ -1,28 +1,13 @@
 ---
 import DocBreadcrumbs from "@/components/docs/DocBreadcrumbs.astro";
+import DocsFooterNav from "@/components/docs/DocsFooterNav.astro";
+import DocsHeader from "@/components/docs/DocsHeader.astro";
 import DocSidebar from "@/components/docs/DocSidebar.astro";
+import DocsNavigation from "@/components/docs/DocsNavigation.astro";
+import { getSidebar } from "@/components/docs/getSidebar";
 import DocsLayout from "@/components/layout/DocsLayout.astro";
-import DocsNavigation from "@/components/layout/DocsNavigation.astro";
 import Layout from "@/components/layout/Layout.astro";
-import Blockquote from "@/components/mdx/Blockquote.astro";
-import Code from "@/components/mdx/Code.astro";
-import FileTree from "@/components/mdx/FileTree.astro";
-import Heading1 from "@/components/mdx/Heading1.astro";
-import Heading2 from "@/components/mdx/Heading2.astro";
-import Heading3 from "@/components/mdx/Heading3.astro";
-import Heading4 from "@/components/mdx/Heading4.astro";
-import Heading5 from "@/components/mdx/Heading5.astro";
-import Heading6 from "@/components/mdx/Heading6.astro";
-import Link from "@/components/mdx/Link.astro";
-import LinkCard from "@/components/mdx/LinkCard.astro";
-import ListItem from "@/components/mdx/ListItem.astro";
-import OrderedList from "@/components/mdx/OrderedList.astro";
-import Paragraph from "@/components/mdx/Paragraph.astro";
-import Step from "@/components/mdx/Step.astro";
-import Steps from "@/components/mdx/Steps.astro";
-import Tab from "@/components/mdx/Tab.astro";
-import Tabs from "@/components/mdx/Tabs.astro";
-import UnorderedList from "@/components/mdx/UnorderedList.astro";
+import { components } from "@/components/mdx/_MdxComponents";
 import { getCollection, render } from "astro:content";
 
 export async function getStaticPaths() {
@@ -32,48 +17,19 @@ export async function getStaticPaths() {
   return docs.map((doc) => ({ props: { doc }, params: { docs: doc.id } }));
 }
 
+const sidebar = await getSidebar();
+
 const { doc } = Astro.props;
 const { Content, headings } = await render(doc);
 ---
 
 <Layout>
   <DocsLayout>
-    <DocsNavigation doc={doc} slot="left" />
-
-    <DocBreadcrumbs doc={doc} />
-
-    <h1 class="text-4xl tracking-tight font-bold">
-      {doc.data.title}
-    </h1>
-
-    {doc.data.description && <p class="text-muted-fg text-sm">{doc.data.description}</p>}
-
-    <hr />
-
-    <Content
-      components={{
-        h1: Heading1,
-        h2: Heading2,
-        h3: Heading3,
-        h4: Heading4,
-        h5: Heading5,
-        h6: Heading6,
-        p: Paragraph,
-        ul: UnorderedList,
-        ol: OrderedList,
-        li: ListItem,
-        a: Link,
-        code: Code,
-        LinkCard: LinkCard,
-        FileTree: FileTree,
-        Tabs: Tabs,
-        Tab: Tab,
-        Steps: Steps,
-        Step: Step,
-        blockquote: Blockquote,
-      }}
-    />
-
+    <DocsNavigation {sidebar} {doc} slot="left" />
+    <DocBreadcrumbs {doc} />
+    <DocsHeader {doc} />
+    <Content {components} />
+    <DocsFooterNav {sidebar} {doc} />
     <DocSidebar {doc} {headings} slot="right" />
   </DocsLayout>
 </Layout>
