feat: improve docs

--- a/apps/docs/src/components/docs/DocBreadcrumbs.astro
+++ b/apps/docs/src/components/docs/DocBreadcrumbs.astro
@@ -13,7 +13,7 @@ type Breadcrumb = { href: string; label: string };
 
 // Construct breadcrumbs:
 // 1. Start with static `docs` link
-const breadcrumbs: Breadcrumb[] = [{ href: "/docs", label: "Docs" }];
+const breadcrumbs: Breadcrumb[] = [{ href: "/docs/getting-started/introduction", label: "Docs" }];
 
 if (doc) {
   // 2. Add each folder in the path to the breadcrumbs
