--- a/apps/docs/src/components/layout/DocsLayout.astro
+++ b/apps/docs/src/components/layout/DocsLayout.astro
@@ -7,11 +7,11 @@
     <slot name="left" />
   </aside>
 
-  <article class="min-w-0 flex flex-col gap-4 flex-1 py-8">
+  <div class="min-w-0 flex-1 py-8 flex flex-col gap-2">
     <slot />
-  </article>
+  </div>
 
-  <aside class="flex-shrink-0 self-start sticky top-22">
+  <aside class="flex-shrink-0 self-start sticky top-22 pb-20">
     <slot name="right" />
   </aside>
 </div>
