--- a/apps/docs/src/components/layout/Layout.astro
+++ b/apps/docs/src/components/layout/Layout.astro
@@ -2,7 +2,8 @@
 import "@/styles/global.css";
 
 import "@fontsource/days-one";
-import "@fontsource/geist-mono";
+import "@fontsource/geist-mono/400.css";
+import "@fontsource/geist-mono/500.css";
 import "@fontsource/geist-sans/400.css";
 import "@fontsource/geist-sans/500.css";
 import "@fontsource/geist-sans/600.css";
