--- a/apps/docs/src/components/mdx/Aside.astro
+++ b/apps/docs/src/components/mdx/Aside.astro
@@ -60,7 +60,7 @@ const Icon = {
       }
     </p>
   </div>
-  <div class="flex pl-6 flex-col gap-2 [&_p]:leading-normal [&_p]:text-sm">
+  <div class="space-y-2 pl-6 [&_p]:leading-relaxed [&_p]:text-sm">
     <slot />
   </div>
 </aside>
