--- a/apps/docs/src/components/mdx/FileTree.astro
+++ b/apps/docs/src/components/mdx/FileTree.astro
@@ -45,7 +45,7 @@ const nodes = $("ul")
   .get();
 ---
 
-<ul class="flex flex-col gap-1 overflow-x-scroll p-2 bg-muted-bg rounded">
+<ul class="flex flex-col gap-1 overflow-x-scroll p-2 bg-muted-bg rounded border">
   {
     nodes.map((node) => {
       return (
