--- a/apps/docs/src/components/mdx/Blockquote.astro
+++ b/apps/docs/src/components/mdx/Blockquote.astro
@@ -7,6 +7,6 @@ type Props = HTMLAttributes<"blockquote">;
 const { class: className, ...props } = Astro.props;
 ---
 
-<blockquote class={cn("border-l-4 italic pl-4", className)} {...props}>
+<blockquote class={cn("border-l-4 italic pl-4 space-y-2", className)} {...props}>
   <slot />
 </blockquote>
