--- a/apps/docs/src/components/mdx/Code.astro
+++ b/apps/docs/src/components/mdx/Code.astro
@@ -9,8 +9,8 @@ const { class: className, ...props } = Astro.props;
 
 <code
   class={cn(
-    "font-mono tracking-tight rounded bg-muted-bg px-1",
-    "[:not(h1,h2,h3,h4,h5,h6>&]:text-sm",
+    "font-mono tracking-tight rounded font-medium bg-muted-fg/5 px-1 border border-muted-fg/5 select-all",
+    "[:not(h1,h2,h3,h4,h5,h6)>&]:text-sm",
     className
   )}
   {...props}><slot /></code
