--- a/apps/docs/src/components/mdx/ListItem.astro
+++ b/apps/docs/src/components/mdx/ListItem.astro
@@ -7,6 +7,6 @@ type Props = HTMLAttributes<"li">;
 const { class: className, ...props } = Astro.props;
 ---
 
-<li class={cn("", className)} {...props}>
+<li class={cn("space-y-2", className)} {...props}>
   <slot />
 </li>
