--- a/apps/docs/src/components/mdx/Paragraph.astro
+++ b/apps/docs/src/components/mdx/Paragraph.astro
@@ -1,7 +1,12 @@
 ---
+import { cn } from "@/utils/cn";
+import type { HTMLAttributes } from "astro/types";
 
+type Props = HTMLAttributes<"p">;
+
+const { class: className, ...props } = Astro.props;
 ---
 
-<p class="leading-[200%]">
+<p class={cn("leading-[200%]", className)} {...props}>
   <slot />
 </p>
