--- a/apps/docs/src/components/mdx/Tab.astro
+++ b/apps/docs/src/components/mdx/Tab.astro
@@ -7,7 +7,7 @@ const { label } = Astro.props;
 ---
 
 <div data-tab={label} class="hidden">
-  <div class="flex flex-col gap-4">
+  <div class="space-y-4">
     <slot />
   </div>
 </div>
