--- a/apps/docs/src/components/mdx/Step.astro
+++ b/apps/docs/src/components/mdx/Step.astro
@@ -4,7 +4,7 @@
 
 <div
   class:list={[
-    "relative flex flex-col gap-4",
+    "group/Step relative flex flex-col gap-4",
     "[&:not(:last-child)]:!pb-8",
     "[&>*:first-child]:!mt-0",
   ]}
@@ -19,5 +19,5 @@
     </p>
   </div>
 
-  <div class="absolute top-10 bottom-2 border-l -left-12"></div>
+  <div class="absolute top-10 -bottom-2 group-last-of-type/Step:bottom-2 border-l -left-12"></div>
 </div>
