--- a/apps/docs/src/components/mdx/Steps.astro
+++ b/apps/docs/src/components/mdx/Steps.astro
@@ -4,7 +4,7 @@ import { nanoid } from "nanoid";
 const id = nanoid();
 ---
 
-<div class="pl-16 relative Mdx_Steps">
+<div class="pl-16 relative Mdx_Steps space-y-4">
   <slot />
 </div>
 
